# FusionCore

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
fusionApp/: build.gradle.kts  proguard-unity.txt
fusionApp/src/main/: AndroidManifest.xml
fusionApp/src/main/java/dev/allofus/fusioncore/: BootstrapActivity.java  ClassLoaderHooks.java  CustomContextWrapper.java  FusionConfig.java  FusionDocumentProvider.java  LibUnityDownloader.java  NativeLibraryManager.java  PackageManagerHooks.java  SelectorActivity.java  UnityPlayerHooks.java  VersionLookup.java
fusionApp/src/main/jni/: CMakeLists.txt
fusionApp/src/main/jni/fusion/: CMakeLists.txt
fusionApp/src/main/jni/fusion/include/: dotnet.h  exports.h  fusion_config.h  logger.h
fusionApp/src/main/jni/fusion/include/hooking/: allocator.h  libunity.h  safehook.h
fusionApp/src/main/jni/fusion/include/utilities/: asm.h  java.h  library.h
fusionApp/src/main/jni/fusion/src/: dotnet.cpp  exports.cpp  fusion.cpp  fusion_config.cpp  logger.cpp
fusionApp/src/main/jni/fusion/src/hooking/: allocator.cpp  libunity.cpp  safehook.cpp
fusionApp/src/main/jni/fusion/src/utilities/: asm.cpp  library.cpp
fusionApp/src/main/jni/main/: CMakeLists.txt  README.txt  main.cpp
fusionApp/src/main/res/values/: strings.xml  styles.xml
fusionApp/src/main/res/values-v21/: styles.xml
fusionApp/src/main/res/values-v31/: styles.xml
launcher/: build.gradle.kts
unityLibrary/: build.gradle.kts
unityLibrary/src/main/: AndroidManifest.xml
unityLibrary/src/main/java/com/unity3d/player/: UnityPlayerActivity.java
unityLibrary/src/main/java/dev/allofus/fusioncore/: ActivityBridge.java  BootstrapActivity.java  ClassLoaderHooks.java  CustomContextWrapper.java  FusionConfig.java  (+3 more)
unityLibrary/src/main/jni/fusion/: CMakeLists.txt
unityLibrary/src/main/jni/fusion/include/: fusion_config.h  java_utils.h  libmain.h
unityLibrary/src/main/jni/fusion/include/hooking/: il2cpp.h
unityLibrary/src/main/jni/fusion/src/: fusion.cpp  fusion_config.cpp
unityLibrary/src/main/jni/fusion/src/hooking/: il2cpp.cpp
unityLibrary/src/main/jni/main/: main.cpp
